--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ body {
 }
 
 #top-textbook i {
-    padding: 3px 10px;
+    padding: 0 10px;
 }
 
 /*DROP DOWN SHADOWS*/
@@ -55,6 +55,8 @@ i {
 }
 
 .fa-plus {
+    display: flex;
+    justify-content: center;
     cursor: pointer;
     font-size: 1.5rem;
     text-align: center;
